--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ glm
 glfw
 LearnOpenGL
 assimp
+Vulkan
 
 # services
 grpc
@@ -66,6 +67,7 @@ transferlearning
 cocoapi
 speech_recognition
 Sports-Type-Classifier
+FGVC
 
 # flutter about
 ibaozi
