[update] .gitignore {added: open-dev-environment}

--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,8 @@ demo-flutter-examples
 
 dev-for-store-with-codelab
 
+open-dev-environment
+
 # meta3 about
 meta3-login-module
 meta3-registion-module
