[update] .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ styled-wind
 wireshark
 swift-win32
 audacity
+tinyobjloader
+Spoon-Knife
 
 # graphics
 glm
@@ -91,6 +93,7 @@ demo-flutter-examples
 
 dev-for-store-with-codelab
 
+MP-common
 open-dev-environment
 
 # meta3 about
