--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ Centos7Note
 SideFXLabs
 HoudiniEngineForUnreal-v2
 HoudiniUsdBridge
-
+youtube-dl
 
 # graphics
 glm
@@ -101,6 +101,7 @@ demo-services-spring
 demo-services-hello_world
 demo-services-simple_app
 demo-flutter-examples
+demo-unreal
 
 dev-for-store-with-codelab
 
