--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,15 @@ SideFXLabs
 HoudiniEngineForUnreal-v2
 HoudiniUsdBridge
 youtube-dl
+Unreal-PyToolkit
+UE4_EOS_Plugin
+QBinder
+cpython
+
+# hg
+Arnold
+ArnoldUSDExtension
+
 
 # pdf
 book
