--- a/.gitignore
+++ b/.gitignore
@@ -115,6 +115,7 @@ demo-services-hello_world
 demo-services-simple_app
 demo-flutter-examples
 demo-unreal
+demo-learning-project
 
 dev-for-store-with-codelab
 
