--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,7 @@ window_to_front
 github_graphql_client
 grpc-mongodb-CURD-example
 aaronmack.github.io
+test-gitlfs
 
 demo-services-spring
 demo-services-hello_world
