--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,7 @@ demo-services-simple_app
 demo-flutter-examples
 demo-unreal
 demo-learning-project
+demo-learning-module
 
 dev-for-store-with-codelab
 
