--- a/.gitignore
+++ b/.gitignore
@@ -116,6 +116,7 @@ demo-services-hello_world
 demo-services-simple_app
 demo-flutter-examples
 demo-unreal
+demo-unreal-indie
 demo-learning-project
 demo-learning-module
 
