--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+# ************************ VIM *****************************
+# Swap
+[._]*.s[a-v][a-z]
+!*.svg  # comment out if you don't need vector files
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+Sessionx.vim
+
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
+# Persistent undo
+[._]*.un~
+# ***********************************************************
 # vscode
 .vscode
 
@@ -57,6 +78,7 @@ cuda-samples
 HoudiniEngineForMaya
 yuanming-hu.github.io
 overleaf
+taichi_three
 
 # hg
 Arnold
